Nuevo: Log en .txt, otros ajustes

--- a/Middleware.Controller/Middleware.Controller.csproj
+++ b/Middleware.Controller/Middleware.Controller.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IniParser.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="VFPMonController.cs" />
     <Compile Include="VFPConController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
