--- a/Middleware.Models/Middleware.Models.csproj
+++ b/Middleware.Models/Middleware.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3916B2D-0F89-47E5-8FA5-D49D364B6B36}</ProjectGuid>
+    <ProjectGuid>{A398B925-3DAE-475D-B14B-FC0C6190EE03}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Middleware.Controller</RootNamespace>
-    <AssemblyName>Middleware.Controller</AssemblyName>
+    <RootNamespace>Middleware.Models</RootNamespace>
+    <AssemblyName>Middleware.Models</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,22 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IniParser.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="RestController.cs" />
-    <Compile Include="VFPMonController.cs" />
-    <Compile Include="VFPConController.cs" />
+    <Compile Include="API\APISesion.cs" />
+    <Compile Include="Local\VFPSesion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Middleware.Models\Middleware.Models.csproj">
-      <Project>{a398b925-3dae-475d-b14b-fc0c6190ee03}</Project>
-      <Name>Middleware.Models</Name>
-    </ProjectReference>
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
