--- a/Middleware.Models/Middleware.Models.csproj
+++ b/Middleware.Models/Middleware.Models.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\APIMaeCue.cs" />
     <Compile Include="API\APISesion.cs" />
+    <Compile Include="Local\VFPMaeCue.cs" />
     <Compile Include="Local\VFPSesion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
