--- a/Middleware.Controller/Middleware.Controller.csproj
+++ b/Middleware.Controller/Middleware.Controller.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComparisonController.cs" />
     <Compile Include="IniParser.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="RestController.cs" />
