--- a/Middleware.Model/Middleware.Model.csproj
+++ b/Middleware.Model/Middleware.Model.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B3916B2D-0F89-47E5-8FA5-D49D364B6B36}</ProjectGuid>
+    <ProjectGuid>{CF72F9BE-81AA-4677-8AFE-00E1D99F5145}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Middleware.Controller</RootNamespace>
-    <AssemblyName>Middleware.Controller</AssemblyName>
+    <RootNamespace>Middleware.Model</RootNamespace>
+    <AssemblyName>Middleware.Model</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,32 +30,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ComparisonController.cs" />
-    <Compile Include="IniParser.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="RestController.cs" />
-    <Compile Include="VFPMonController.cs" />
-    <Compile Include="VFPConController.cs" />
+    <Compile Include="API\APIMaeCue.cs" />
+    <Compile Include="API\APISesion.cs" />
+    <Compile Include="API\APITabanco.cs" />
+    <Compile Include="API\APITabaux10.cs" />
+    <Compile Include="Local\VFPMaeCue.cs" />
+    <Compile Include="Local\VFPSesion.cs" />
+    <Compile Include="Local\VFPTabanco.cs" />
+    <Compile Include="Local\VFPTabaux10.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Middleware.Model\Middleware.Model.csproj">
-      <Project>{cf72f9be-81aa-4677-8afe-00e1d99f5145}</Project>
-      <Name>Middleware.Model</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
