- Implementado: API Key en config.ini con Base64

--- a/Middleware.Controller/Middleware.Controller.csproj
+++ b/Middleware.Controller/Middleware.Controller.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base64Controller.cs" />
     <Compile Include="ComparisonController.cs" />
     <Compile Include="IniParser.cs" />
     <Compile Include="Log.cs" />
